--- a/admin.html
+++ b/admin.html
@@ -57,23 +57,31 @@
         </div>
 
         <div id="stud-section" class="hidden glass-card">
-            <h2>📤 Registration</h2>
+            <h2>📤 Member Registration</h2>
             <textarea id="bulk-input" placeholder="Name, CollID, StudentID, Pass, Role" onclick="checkBulkAccess()"></textarea>
             <button id="bulk-btn" class="btn-sm" style="background:var(--blue);" onclick="processBulk()">Process Bulk</button>
         </div>
 
-        <div id="msg-section" class="hidden glass-card"><h2>📥 Inbox</h2><div id="inbox-list"></div></div>
+        <div id="msg-section" class="hidden glass-card">
+            <h2>📥 Super Inbox</h2>
+            <div id="inbox-list"></div>
+            <div id="coll-help-div" class="hidden" style="margin-top:30px; border-top:1px solid var(--border); padding-top:20px;">
+                <h3 style="color:var(--orange)">Contact Super Admin</h3>
+                <textarea id="admin-help-msg" placeholder="Your message..."></textarea>
+                <button class="btn-sm" style="background:var(--orange); width:100%;" onclick="sendAdminHelp()">Send</button>
+            </div>
+        </div>
     </div>
 
     <div id="user-modal" class="hidden">
         <div class="modal-content">
             <div style="display:flex; justify-content:space-between; align-items:center;">
-                <h3 id="modal-title">Report</h3>
+                <h3 id="modal-title">Student Report</h3>
                 <button onclick="closeModal()" class="btn-sm" style="background:#ef4444;">X</button>
             </div>
 
             <div id="super-role-box" class="hidden glass-card" style="padding:15px; margin: 15px 0; border-color:var(--purple);">
-                <label style="font-size:11px;">Change Role:</label>
+                <label style="font-size:11px;">Change Member Role:</label>
                 <div style="display:flex; gap:10px; margin-top:5px;">
                     <select id="new-role-select" class="login-field" style="margin:0; flex:1;"><option value="student">Student</option><option value="faculty">Faculty</option></select>
                     <button class="btn-sm" style="background:var(--purple);" onclick="changeUserRole()">Update</button>
@@ -89,6 +97,7 @@
     const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
     firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
     const adminAccounts = { "aslin": "Phlagon@28", "IMC26": "IMC26@theo", "ASLIN26": "ASLIN26@theo" };
+    
     let activeUID = ""; let loggedAdminId = ""; let isSuperAdmin = false;
     let logUnsubscribe = null;
 
@@ -96,7 +105,8 @@
         const id = document.getElementById('acid').value; const p = document.getElementById('apass').value;
         if(adminAccounts[id] === p) {
             loggedAdminId = id; isSuperAdmin = (id === "aslin");
-            document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden');
+            document.getElementById('auth-overlay').classList.add('hidden');
+            document.getElementById('master-panel').classList.remove('hidden');
             setupUI(); initAdmin();
         } else { alert("Denied"); }
     }
@@ -105,14 +115,17 @@
         if (!isSuperAdmin) {
             document.getElementById('t-stud').classList.add('hidden');
             document.getElementById('coll-selector-div').classList.add('hidden');
+            document.getElementById('coll-help-div').classList.remove('hidden');
             document.getElementById('inv-header').innerHTML = "<th>Title</th><th>Category</th>";
             loadCollegeStudents(loggedAdminId);
         } else {
+            document.getElementById('t-stud').classList.remove('hidden');
+            document.getElementById('t-msg').classList.remove('hidden');
             document.getElementById('inv-header').innerHTML = "<th>Title</th><th>Access</th><th>Cat</th><th>Action</th>";
         }
     }
 
-    function checkBulkAccess() { if (!isSuperAdmin) { alert("Please contact administrator for member registration."); document.getElementById('bulk-input').blur(); } }
+    function checkBulkAccess() { if (!isSuperAdmin) { alert("Registration Locked. Contact Administrator."); document.getElementById('bulk-input').blur(); } }
 
     function initAdmin() {
         db.collection("library_settings").onSnapshot(snap => {
@@ -133,7 +146,7 @@
                 const list = document.getElementById('inbox-list'); list.innerHTML = "";
                 let msgs = []; snap.forEach(d => msgs.push({id: d.id, ...d.data()}));
                 msgs.sort((a,b) => (b.date || 0) - (a.date || 0)).forEach(m => {
-                    list.innerHTML += `<div class="glass-card" style="margin-bottom:10px; font-size:12px;"><b style="color:var(--blue)">${m.type}</b> from ${m.college}<br>${m.message || m.book}<div style="text-align:right"><button class="btn-sm" style="background:#ef4444" onclick="deleteMsg('${m.id}')">Del</button></div></div>`;
+                    list.innerHTML += `<div class="glass-card" style="margin-bottom:10px; font-size:12px;"><b style="color:var(--blue)">${m.type}</b> | ${m.college}<br>${m.message || m.book}<div style="text-align:right"><button class="btn-sm" style="background:#ef4444" onclick="deleteMsg('${m.id}')">Del</button></div></div>`;
                 });
             });
         }
@@ -146,6 +159,7 @@
         }); 
     }
 
+    // --- RE-RESTORED EXCELLENT LOG LOGIC ---
     function openReport(uid, name, role) { 
         activeUID = uid; document.getElementById('user-modal').classList.remove('hidden'); document.getElementById('modal-title').innerText = name; 
         if(isSuperAdmin) {
@@ -164,15 +178,29 @@
             });
             document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Borrowed<br><b>${fmt(b)}</b></div></div>`;
             document.getElementById('log-body').innerHTML = html || "<tr><td colspan='4'>No activity logged.</td></tr>";
-        });
+        }, err => { alert("Sync Error. Check rules."); });
     }
 
-    async function changeUserRole() { if(!isSuperAdmin) return; await db.collection("users").doc(activeUID).update({ role: document.getElementById('new-role-select').value }); alert("Updated!"); }
+    async function changeUserRole() {
+        if(!isSuperAdmin || !activeUID) return;
+        const newR = document.getElementById('new-role-select').value;
+        await db.collection("users").doc(activeUID).update({ role: newR });
+        alert("Role Updated Successfully!");
+    }
+
+    async function sendAdminHelp() {
+        const m = document.getElementById('admin-help-msg').value; if(!m) return;
+        await db.collection("admin_messages").add({ type: "Admin Helpdesk", message: m, college: loggedAdminId, date: Date.now() });
+        alert("Message Sent!"); document.getElementById('admin-help-msg').value = "";
+    }
+
     function fmt(s) { if(isNaN(s) || s <= 0) return "00:00:00"; const h = Math.floor(s/3600).toString().padStart(2,'0'), m = Math.floor((s%3600)/60).toString().padStart(2,'0'), sec = (s%60).toString().padStart(2,'0'); return `${h}:${m}:${sec}`; }
-    function closeModal() { document.getElementById('user-modal').classList.add('hidden'); if(logUnsubscribe) logUnsubscribe(); }
+    function closeModal() { document.getElementById('user-modal').classList.add('hidden'); document.getElementById('super-role-box').classList.add('hidden'); if(logUnsubscribe) logUnsubscribe(); }
     function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
+    function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => m.id !== id ? m.classList.remove('show') : null); document.getElementById(id).classList.toggle('show'); }
     async function deletePDF(id) { if(confirm("Delete?")) await db.collection("library_settings").doc(id).delete(); }
     async function deleteMsg(id) { await db.collection("admin_messages").doc(id).delete(); }
+    async function processBulk() { if(!isSuperAdmin) return; const lines = document.getElementById('bulk-input').value.split('\n'); for(let l of lines) { const p = l.split(',').map(i=>i.trim()); if(p.length===5) await db.collection("users").add({ fullName:p[0], collegeId:p[1], studentId:p[2], password:p[3], role:p[4].toLowerCase() }); } alert("Done!"); }
 </script>
 </body>
 </html>
