--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>TheoLib - Final Master Portal</title>
+    <title>TheoLib - Student Portal</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -12,16 +12,13 @@
         :root { --blue: #3b82f6; --orange: #f97316; --green: #10b981; --purple: #a855f7; --bg: #0b1120; --card-bg: #1e293b; --text-main: #f8fafc; --text-sub: #94a3b8; --border: #334155; }
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 15px; color: var(--text-main); overflow-x: hidden; }
         .glass-card { background: var(--card-bg); border-radius: 20px; padding: 20px; border: 1px solid var(--border); margin-bottom: 15px; }
-        .stat-card { padding: 15px; border-radius: 15px; color: white; text-align: center; cursor: pointer; transition: 0.3s; }
-        .stat-card:active { transform: scale(0.95); }
+        .stat-card { padding: 15px; border-radius: 15px; color: white; text-align: center; cursor: pointer; }
         .stat-card p { font-size: 20px; margin: 5px 0 0; font-weight: 800; }
-        .book-item { background: #0f172a; padding: 15px; border-radius: 15px; border: 1px solid var(--border); margin-bottom: 12px; }
+        .book-item { background: #0f172a; padding: 12px; border-radius: 12px; border: 1px solid var(--border); margin-bottom: 10px; }
         .login-field, select, textarea { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 12px; outline: none; box-sizing: border-box; font-family: inherit; }
-        .btn-preview { background: var(--blue); color: white; border: none; padding: 10px 15px; border-radius: 8px; cursor: pointer; font-size: 11px; font-weight: 600; margin-top: 5px; }
-        #auth-screen, #profile-overlay, #reader-overlay, #full-lib-view, #borrow-view, #search-results-overlay, .full-modal { position: fixed; inset: 0; z-index: 9000; background: var(--bg); display: flex; flex-direction: column; padding: 20px; overflow-y: auto; }
+        .btn-preview { background: var(--blue); color: white; border: none; padding: 8px 12px; border-radius: 8px; cursor: pointer; font-size: 11px; font-weight: 600; }
+        #auth-screen, #profile-overlay, #reader-overlay, #full-lib-view, #borrow-view, .full-modal { position: fixed; inset: 0; z-index: 9000; background: var(--bg); display: flex; flex-direction: column; padding: 20px; overflow-y: auto; }
         .hidden { display: none !important; }
-        .cat-item { cursor: pointer; background: #0f172a; padding: 12px; border-radius: 12px; border: 1px solid var(--border); margin-bottom: 8px; font-size: 13px; text-align: center; font-weight: 600; }
-        .time-header { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 15px; }
         .time-box { background: var(--card-bg); border: 1px solid var(--border); padding: 10px; border-radius: 15px; text-align: center; }
         .time-val { font-family: monospace; font-weight: 800; font-size: 16px; }
         .status-dot { width: 8px; height: 8px; background: var(--green); border-radius: 50%; display: inline-block; margin-right: 5px; }
@@ -29,7 +26,6 @@
     </style>
 </head>
 <body>
-
     <div id="auth-screen">
         <div style="background:var(--card-bg); padding:30px; border-radius:24px; text-align:center; max-width:350px; margin:auto; border:1px solid var(--border);">
             <h2 style="color:var(--blue)">TheoLib Login</h2>
@@ -37,14 +33,14 @@
             <input type="text" id="login-coll-id" class="login-field" placeholder="College ID">
             <input type="text" id="login-user-id" class="login-field" placeholder="User ID">
             <input type="password" id="login-pass" class="login-field" placeholder="Password">
-            <button onclick="handleLogin()" style="background:var(--blue); color:white; border:none; width:100%; padding:15px; border-radius:12px; font-weight:600; cursor:pointer;">Enter Library</button>
+            <button onclick="handleLogin()" style="background:var(--blue); color:white; border:none; width:100%; padding:15px; border-radius:12px; font-weight:600;">Enter</button>
         </div>
     </div>
 
     <div id="dashboard" class="hidden">
-        <div class="time-header">
-            <div id="session-box" class="time-box" style="border-color: var(--green);"><span class="time-label"><span class="status-dot"></span>Session</span><br><span id="session-clock" class="time-val" style="color: var(--green);">00:00:00</span></div>
-            <div class="time-box"><span class="time-label">Current</span><br><span id="real-time-clock" class="time-val" style="color: var(--blue);">00:00:00</span></div>
+        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-bottom:15px;">
+            <div id="session-box" class="time-box" style="border-color: var(--green);"><span>Session</span><br><span id="session-clock" class="time-val" style="color: var(--green);">00:00:00</span></div>
+            <div class="time-box"><span>Current</span><br><span id="real-time-clock" class="time-val" style="color: var(--blue);">00:00:00</span></div>
         </div>
 
         <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap:10px; margin-bottom:20px;">
@@ -53,82 +49,28 @@
             <div class="stat-card" style="background:var(--purple)" onclick="toggleProfile()"><h4>Profile</h4><p>U</p></div>
         </div>
 
-        <div style="display:grid; grid-template-columns: 2fr 1.2fr; gap: 15px;">
-            <div>
-                <div class="glass-card">
-                    <h3>📚 Categories</h3>
-                    <div style="display:grid; grid-template-columns: 1fr 1fr; gap:8px;">
-                        <div class="cat-item" onclick="loadCat('Theology')">📖 Theology</div>
-                        <div class="cat-item" onclick="loadCat('Church History')">⛪ History</div>
-                        <div class="cat-item" onclick="loadCat('Mission')">🌍 Mission</div>
-                        <div class="cat-item" onclick="loadCat('Bible Intro')">📘 Bible</div>
-                        <div class="cat-item" onclick="loadCat('Acts')">📜 Acts</div>
-                        <div class="cat-item" onclick="loadCat('Other Books')">📚 Others</div>
-                    </div>
-                </div>
-                <div class="glass-card" style="border-color: var(--orange);">
-                    <h3>📖 Request a Book</h3>
-                    <input type="text" id="req-book" placeholder="Book Name (Mandatory)" class="login-field">
-                    <button class="btn-preview" style="background:var(--orange); width:100%;" onclick="submitRequest()">Submit Request</button>
-                </div>
-            </div>
-            <div>
-                <div class="glass-card" style="border-color: var(--purple);">
-                    <h4>💡 Suggestions</h4>
-                    <textarea id="feat-suggest" style="height:100px; margin-top:10px;" placeholder="Required features..."></textarea>
-                    <button class="btn-preview" style="background:var(--purple); width:100%;" onclick="submitSuggestion()">Send</button>
-                </div>
-                <div class="glass-card">
-                    <h4>📞 Helpdesk</h4>
-                    <button class="btn-preview" style="width:100%;" onclick="showContactModal()">Contact Us</button>
-                </div>
-            </div>
+        <div class="glass-card">
+            <h3>📖 Books</h3>
+            <div id="book-list"></div>
         </div>
     </div>
 
-    <div id="full-lib-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📚 All Books</h3><button onclick="closeView('full-lib-view')" class="btn-preview">Back</button></div><div id="full-book-list"></div></div>
-    <div id="borrow-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📥 Issued Books</h3><button onclick="closeView('borrow-view')" class="btn-preview">Back</button></div><div id="borrow-list"></div></div>
-    
-    <div id="profile-overlay" class="hidden">
-        <div class="glass-card" style="max-width:350px; margin:auto; text-align:center;">
-            <h2 id="prof-name">Name</h2>
-            <div id="prof-role" style="background:var(--blue); display:inline-block; padding:5px 15px; border-radius:20px; font-size:11px; margin-bottom:15px; font-weight:800;">ROLE</div>
-            <div style="text-align:left; font-size:12px;">
-                <p><b>College ID:</b> <span id="p-coll-id"></span></p>
-                <p><b>User ID:</b> <span id="p-stud-id"></span></p>
-            </div>
-            <button onclick="toggleProfile()" class="btn-preview">Back</button>
-            <button onclick="handleLogout()" style="background:red; margin-top:10px; width:100%;" class="btn-preview">Logout</button>
-        </div>
-    </div>
-
-    <div id="contact-modal" class="full-modal hidden">
-        <div class="glass-card" style="max-width:400px; margin:auto;">
-            <h3>Contact Us</h3>
-            <input type="text" id="con-coll" placeholder="College Name" class="login-field">
-            <textarea id="con-msg" placeholder="Message..." style="height:100px;"></textarea>
-            <button class="btn-preview" style="width:100%;" onclick="submitContact()">Send</button>
-            <button class="btn-preview" style="background:none; border:1px solid var(--border); width:100%; margin-top:10px;" onclick="closeContactModal()">Cancel</button>
-        </div>
-    </div>
-
-    <div id="reader-overlay" class="hidden"><div style="background:#1e293b; padding:15px; display:flex; justify-content:space-between; align-items:center;"> <span id="reader-title"></span> <button onclick="closeReader()" style="background:red; color:white; border:none; padding:8px 12px; border-radius:5px;">Exit</button> </div> <iframe id="pdf-frame" style="width:100%; height:100%; border:none;"></iframe></div>
+    <div id="reader-overlay" class="hidden"><div style="background:#1e293b; padding:15px; display:flex; justify-content:space-between;"><span id="reader-title"></span><button onclick="closeReader()" style="background:red; color:white; border:none; padding:8px 12px; border-radius:5px;">Exit</button></div><iframe id="pdf-frame" style="width:100%; height:100%; border:none;"></iframe></div>
 
     <script>
         const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
         firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
-        let currentUser = null; let collegeBooks = []; let sessionSeconds = 0; let isActive = true;
+        let currentUser = null; let sessionSeconds = 0; let isActive = true;
         let trackingState = { activeDocId: null, type: "Total App Usage", title: "Login Session" };
 
         document.addEventListener("visibilitychange", async () => {
             isActive = !document.hidden;
-            document.getElementById('session-box').classList.toggle('paused', !isActive);
             if (!isActive) await stopTracking();
             else if (currentUser) await startTracking(trackingState.type, trackingState.title);
         });
 
         async function handleLogin() {
-            const r = document.getElementById('login-role').value, cid = document.getElementById('login-coll-id').value.trim(), uid = document.getElementById('login-user-id').value.trim(), pass = document.getElementById('login-pass').value.trim();
+            const cid = document.getElementById('login-coll-id').value.trim(), uid = document.getElementById('login-user-id').value.trim(), pass = document.getElementById('login-pass').value.trim();
             const snap = await db.collection("users").where("collegeId","==",cid).where("studentId","==",uid).where("password","==",pass).get();
             if(!snap.empty) {
                 currentUser = { uid: snap.docs[0].id, ...snap.docs[0].data() };
@@ -138,66 +80,28 @@
         }
 
         function initSystem() {
-            setInterval(() => { if(isActive) { sessionSeconds++; updCl('session-clock', sessionSeconds); } }, 1000);
+            setInterval(() => { if(isActive) { sessionSeconds++; document.getElementById('session-clock').innerText = new Date(sessionSeconds * 1000).toISOString().substr(11, 8); } }, 1000);
             setInterval(() => { document.getElementById('real-time-clock').innerText = new Date().toLocaleTimeString(); }, 1000);
-            loadLibrary();
-        }
-
-        function updCl(id, s) { const h = Math.floor(s/3600).toString().padStart(2,'0'), m = Math.floor((s%3600)/60).toString().padStart(2,'0'), sec = (s%60).toString().padStart(2,'0'); document.getElementById(id).innerText = `${h}:${m}:${sec}`; }
-
-        function loadLibrary() {
             db.collection("library_settings").where("allowedColleges","array-contains",currentUser.collegeId).onSnapshot(snap => {
-                collegeBooks = []; snap.forEach(doc => collegeBooks.push({id: doc.id, ...doc.data()}));
-                document.getElementById('top-total').innerText = collegeBooks.length;
+                const list = document.getElementById('book-list'); list.innerHTML = "";
+                snap.forEach(doc => { 
+                    const b = doc.data(); 
+                    list.innerHTML += `<div class="book-item"><b>${b.title}</b><br><button class="btn-preview" onclick="openPdf('${doc.id}','${b.title}')">Read</button> <button class="btn-preview" style="background:var(--orange)" onclick="borrowBook('${doc.id}','${b.title}')">Borrow</button></div>`;
+                });
+                document.getElementById('top-total').innerText = snap.size;
             });
-            db.collection("borrows").where("userId","==",currentUser.uid).onSnapshot(snap => {
-                document.getElementById('top-issued').innerText = snap.size;
-                const list = document.getElementById('borrow-list'); list.innerHTML = "";
-                snap.forEach(doc => { list.innerHTML += `<div class="book-item"><b>${doc.data().title}</b><br><button class="btn-preview" onclick="openPdf('${doc.data().bookId}','${doc.data().title}')">Open Full Book</button></div>`; });
-            });
         }
 
-        function loadCat(cat) {
-            const list = document.getElementById('full-book-list'); list.innerHTML = "";
-            const filtered = collegeBooks.filter(b => b.category === cat);
-            filtered.forEach(b => { list.innerHTML += `<div class="book-item"><b>${b.title}</b><br><button class="btn-preview" onclick="openPdf('${b.id}','${b.title}')">Preview</button></div>`; });
-            document.getElementById('full-lib-view').classList.remove('hidden');
-        }
-
-        function showFullLibrary() {
-            const list = document.getElementById('full-book-list'); list.innerHTML = "";
-            collegeBooks.forEach(b => { list.innerHTML += `<div class="book-item"><b>${b.title}</b><br><button class="btn-preview" onclick="openPdf('${b.id}','${b.title}')">Preview</button> <button class="btn-preview" style="background:var(--orange)" onclick="borrow('${b.id}','${b.title}')">Borrow</button></div>`; });
-            document.getElementById('full-lib-view').classList.remove('hidden');
-        }
-
-        async function borrow(id, t) { if(confirm(`Borrow ${t}?`)) await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, date: Date.now() }); }
-        
         async function startTracking(type, title) {
-            trackingState.type = type; trackingState.title = title;
             const log = await db.collection("activity_logs").add({ userId: currentUser.uid, type: type, startTime: Date.now(), endTime: null, activity: title });
-            trackingState.activeDocId = log.id;
+            trackingState.activeDocId = log.id; trackingState.type = type; trackingState.title = title;
         }
+
         async function stopTracking() { if(trackingState.activeDocId) { await db.collection("activity_logs").doc(trackingState.activeDocId).update({ endTime: Date.now() }); trackingState.activeDocId = null; } }
 
-        async function openPdf(id, t) { await stopTracking(); await startTracking("Read Online", t); document.getElementById('reader-title').innerText = t; document.getElementById('pdf-frame').src = `/public/${id}_read_online.pdf`; document.getElementById('reader-overlay').classList.remove('hidden'); }
-        async function closeReader() { stopTracking(); startTracking("Total App Usage", "Login Session"); document.getElementById('reader-overlay').classList.add('hidden'); }
-
-        async function submitRequest() { const b = document.getElementById('req-book').value; if(!b) return; await db.collection("admin_messages").add({ type: "Request", book: b, user: currentUser.fullName, college: currentUser.collegeId, date: Date.now() }); alert("Sent!"); }
-        async function submitSuggestion() { const s = document.getElementById('feat-suggest').value; if(!s) return; await db.collection("admin_messages").add({ type: "Suggestion", message: s, user: currentUser.fullName, date: Date.now() }); alert("Sent!"); }
-        async function submitContact() { const m = document.getElementById('con-msg').value; if(!m) return; await db.collection("admin_messages").add({ type: "Helpdesk", college: document.getElementById('con-coll').value, message: m, user: currentUser.fullName, date: Date.now() }); alert("Sent!"); closeContactModal(); }
-
-        function toggleProfile() { 
-            document.getElementById('prof-name').innerText = currentUser.fullName; 
-            document.getElementById('prof-role').innerText = (currentUser.role || "student").toUpperCase();
-            document.getElementById('p-coll-id').innerText = currentUser.collegeId;
-            document.getElementById('p-stud-id').innerText = currentUser.studentId;
-            document.getElementById('profile-overlay').classList.toggle('hidden'); 
-        }
-        function handleLogout() { stopTracking(); location.reload(); }
-        function showBorrowView() { document.getElementById('borrow-view').classList.remove('hidden'); }
-        function showContactModal() { document.getElementById('contact-modal').classList.remove('hidden'); }
-        function closeContactModal() { document.getElementById('contact-modal').classList.add('hidden'); }
-        function closeView(id) { document.getElementById(id).classList.add('hidden'); }
+        async function openPdf(id, t) { await stopTracking(); await startTracking("Read Online", t); document.getElementById('pdf-frame').src = `/public/${id}_read_online.pdf`; document.getElementById('reader-overlay').classList.remove('hidden'); }
+        async function borrowBook(id, t) { await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, date: Date.now() }); alert("Issued!"); }
+        function closeReader() { stopTracking(); startTracking("Total App Usage", "Login Session"); document.getElementById('reader-overlay').classList.add('hidden'); }
     </script>
 </body>
 </html>
