--- a/admin.html
+++ b/admin.html
@@ -17,16 +17,15 @@
         .tab-btn { padding: 12px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: var(--card-bg); color: var(--text-sub); border: 1px solid var(--border); }
         .tab-btn.active { background: var(--blue); color: white; border-color: var(--blue); }
         .glass-card { background: var(--card-bg); border-radius: 20px; padding: 25px; border: 1px solid var(--border); margin-bottom: 20px; }
-        table { width: 100%; border-collapse: collapse; margin-top:10px; }
+        table { width: 100%; border-collapse: collapse; }
         td, th { padding: 12px; border-bottom: 1px solid var(--border); text-align: left; font-size: 13px; }
         .btn-sm { padding: 8px 15px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; color: white; }
         .hidden { display: none !important; }
         .user-folder { background: #0f172a; padding: 15px; border-radius: 12px; margin-bottom: 10px; cursor: pointer; border: 1px solid var(--border); }
-        .stat-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; }
+        .stat-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 15px; }
         .stat-box { background: #0f172a; padding: 10px; border-radius: 10px; text-align: center; border: 1px solid var(--border); }
         #user-modal { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 6000; display: flex; align-items: center; justify-content: center; }
-        .modal-content { background: var(--card-bg); width: 90%; max-width: 800px; border-radius: 20px; padding: 25px; max-height: 90vh; overflow-y: auto; }
-        .login-field { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 12px; }
+        .modal-content { background: var(--card-bg); width: 90%; max-width: 850px; border-radius: 20px; padding: 25px; max-height: 90vh; overflow-y: auto; }
     </style>
 </head>
 <body>
@@ -37,11 +36,12 @@
             <button id="t-inv" class="tab-btn active" onclick="switchTab('inv')">Inventory</button>
             <button id="t-mem" class="tab-btn" onclick="switchTab('mem')">Monitoring</button>
             <button id="t-stud" class="tab-btn" onclick="switchTab('stud')">Registration</button>
+            <button id="t-msg" class="tab-btn" onclick="switchTab('msg')">Inbox</button>
             <button class="tab-btn" style="background:red; color:white; margin-left:auto;" onclick="location.reload()">Logout</button>
         </div>
 
         <div id="inv-section" class="glass-card">
-            <table><thead><tr><th>Title</th><th>Category</th><th>Action</th></tr></thead><tbody id="inventory-list"></tbody></table>
+            <table><thead><tr id="inv-header"><th>Title</th><th>Access</th><th>Cat</th><th>Action</th></tr></thead><tbody id="inventory-list"></tbody></table>
         </div>
 
         <div id="mem-section" class="hidden glass-card">
@@ -51,15 +51,18 @@
 
         <div id="stud-section" class="hidden glass-card">
             <h2>Registration</h2>
-            <textarea id="bulk-input" class="login-field" style="height:100px;" placeholder="Only Super Admin can edit" onclick="checkBulkAccess()"></textarea>
+            <textarea id="bulk-input" class="login-field" style="height:100px;" placeholder="Only Super Admin can register" onclick="checkBulkAccess()"></textarea>
+            <button id="bulk-btn" class="btn-sm" style="background:var(--blue);" onclick="processBulk()">Process Bulk</button>
         </div>
+
+        <div id="msg-section" class="hidden glass-card"><h2>📥 Inbox</h2><div id="inbox-list"></div></div>
     </div>
 
     <div id="user-modal" class="hidden">
         <div class="modal-content">
             <div style="display:flex; justify-content:space-between;"><h3>Report</h3><button onclick="closeModal()" class="btn-sm" style="background:red;">X</button></div>
-            <div id="super-role-box" class="hidden glass-card" style="border-color:var(--purple); padding:10px;">
-                <label>Role:</label>
+            <div id="super-role-box" class="hidden glass-card" style="border-color:var(--purple); padding:10px; margin: 10px 0;">
+                <label>Change Role:</label>
                 <select id="new-role-select" class="login-field" style="margin:5px 0;"><option value="student">Student</option><option value="faculty">Faculty</option></select>
                 <button class="btn-sm" style="background:var(--purple);" onclick="changeUserRole()">Update</button>
             </div>
@@ -72,16 +75,21 @@
     const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
     firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
     const admins = { "aslin": "Phlagon@28", "IMC26": "IMC26@theo" };
-    let activeUID = "", loggedAdmin = "", isSuper = false, unsubscribe = null;
+    let activeUID = "", isSuper = false, logUnsub = null;
 
     function handleAdminLogin() {
         const id = document.getElementById('acid').value, p = document.getElementById('apass').value;
         if(admins[id] === p) {
-            loggedAdmin = id; isSuper = (id === "aslin");
-            document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden');
-            if(!isSuper) { document.getElementById('t-stud').classList.add('hidden'); loadStudents(id); }
-            initAdmin();
+            isSuper = (id === "aslin"); document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden');
+            setupUI(); initAdmin();
         } else alert("Denied");
+    }
+
+    function setupUI() {
+        if (!isSuper) {
+            document.getElementById('t-stud').classList.add('hidden'); document.getElementById('t-msg').classList.add('hidden');
+            document.getElementById('inv-header').innerHTML = "<th>Title</th><th>Category</th>";
+        }
     }
 
     function initAdmin() {
@@ -89,8 +97,12 @@
             const list = document.getElementById('inventory-list'); list.innerHTML = "";
             snap.forEach(doc => {
                 const b = doc.data();
-                list.innerHTML += `<tr><td>${b.title}</td><td>${b.category}</td><td>${isSuper ? '<button class="btn-sm" style="background:red">Del</button>' : 'None'}</td></tr>`;
+                list.innerHTML += `<tr><td>${b.title}</td><td>${isSuper ? '<button class="btn-sm" style="background:var(--purple)">Access</button>' : b.category}</td><td>${isSuper ? '<button class="btn-sm" style="background:var(--green)">Cat</button>' : 'N/A'}</td><td>${isSuper ? '<button class="btn-sm" style="background:red">Del</button>' : 'N/A'}</td></tr>`;
             });
+        });
+        if(isSuper) db.collection("admin_messages").onSnapshot(snap => {
+            const list = document.getElementById('inbox-list'); list.innerHTML = "";
+            snap.forEach(doc => { const m = doc.data(); list.innerHTML += `<div class="glass-card"><b style="color:var(--blue)">${m.type}</b> from ${m.college}<br>${m.message || m.book}</div>`; });
         });
     }
 
@@ -104,24 +116,23 @@
     function openReport(uid, name) {
         activeUID = uid; document.getElementById('user-modal').classList.remove('hidden');
         if(isSuper) document.getElementById('super-role-box').classList.remove('hidden');
-        if(unsubscribe) unsubscribe();
-        unsubscribe = db.collection("activity_logs").where("userId", "==", uid).onSnapshot(snap => {
+        if(logUnsub) logUnsub();
+        logUnsub = db.collection("activity_logs").where("userId", "==", uid).onSnapshot(snap => {
             let html = "", t=0, o=0, b=0, logs = [];
             snap.forEach(d => logs.push(d.data()));
-            logs.sort((x, y) => y.startTime - x.startTime);
-            logs.forEach(d => {
-                const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
+            logs.sort((x,y) => (y.startTime||0)-(x.startTime||0)).forEach(d => {
+                const dur = d.endTime ? Math.floor((d.endTime - d.startTime)/1000) : 0;
                 if(d.type.includes("Usage")) t+=dur; if(d.type.includes("Online")) o+=dur; if(d.type.includes("Borrowed")) b+=dur;
                 html += `<tr><td>${d.type}<br><small>${d.activity||''}</small></td><td>${new Date(d.startTime).toLocaleTimeString()}</td><td>${Math.floor(dur/60)}m</td></tr>`;
             });
-            document.getElementById('modal-stats').innerHTML = `<div class="stat-box">Usage<br>${Math.floor(t/60)}m</div><div class="stat-box">Online<br>${Math.floor(o/60)}m</div><div class="stat-box">Borrowed<br>${Math.floor(b/60)}m</div>`;
-            document.getElementById('log-body').innerHTML = html || "<tr><td colspan='3'>No logs</td></tr>";
+            document.getElementById('modal-stats').innerHTML = `<div class="stat-box">Usage<br>${Math.floor(t/60)}m</div><div class="stat-box">Read<br>${Math.floor(o/60)}m</div><div class="stat-box">Borrowed<br>${Math.floor(b/60)}m</div>`;
+            document.getElementById('log-body').innerHTML = html || "<tr><td colspan='3'>No activity</td></tr>";
         });
     }
 
-    function checkBulkAccess() { if(!isSuper) { alert("Contact Administrator"); document.getElementById('bulk-input').blur(); } }
+    function checkBulkAccess() { if(!isSuper) { alert("Contact Super Admin"); document.getElementById('bulk-input').blur(); } }
     async function changeUserRole() { await db.collection("users").doc(activeUID).update({ role: document.getElementById('new-role-select').value }); alert("Done"); }
-    function closeModal() { document.getElementById('user-modal').classList.add('hidden'); if(unsubscribe) unsubscribe(); }
+    function closeModal() { document.getElementById('user-modal').classList.add('hidden'); }
     function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
 </script>
 </body>
